@@ -80,6 +80,7 @@ private slots:
 
     void test_requestPosition_invalidPosition_shouldNotChangePosition();
     void test_requestPosition_validPosition_shouldChangePosition();
+    void test_resetSongPosition_firstTrackRemoved_shouldResetPosition();
 
     void test_requestScroll_shouldChangePosition();
     void test_requestScroll_shouldChangeCurrentTime();
